change css and index html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Login Form Template</title>
 </head>
 <body>
+	<span></span>
     <div class="center">
         <section class="container">
            <section class="form-header">
