added new span for test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<span></span>
+	<span></span>
     <div class="center">
         <section class="container">
            <section class="form-header">
