Start the second Login Form template and add some htm stucture (create the container adn left side) and add some css

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>FLUX FORM</title>
 </head>
 <body>
-    
+    <!-- Start header case -->
+    <header>
+        <h1>FLUX</h1>
+        <h4>Login & Register</h4>
+        <button>BUY NOW</button>
+    </header>
+    <!-- end header case -->
+
+    <!-- Start Container case -->
+    <div class="container">
+        <section class="left-side">
+            <h2>Register</h2>
+            <p>Insert your information</p>
+            <div class="input-element"><i class="mdi mdi-account"></i> <input type="text" class="a"> </div>
+            <div class="input-element"><i class="mdi-lock"></i> <input type="text" class="a"> </div>
+            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="a"> </div>
+            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="a"> </div>
+            <section class="foot">
+                <ul>
+                    <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
+                    <li><button>Register</button></li>
+                </ul>
+            </section>
+        </section>
+    </div>
+    <!-- end conatiner case -->
 </body>
 </html>
