Complete html stucture

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -31,6 +31,30 @@
                 </ul>
             </section>
         </section>
+        <section class="main-side">
+                <h2>Login</h2>
+                <p>Login using social network</p>
+                <section class="social">
+                    <a href="#">
+                        <i class="mdi-facebook-box"></i>
+                        Sign In Facebook
+                    </a>
+                    <a href="#">
+                        <i clmdi-twitter-box"></i>
+                        Sign In Twitter
+                    </a>
+                </section>
+                <p>Or insert your account informations</p>
+                <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
+                <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
+                 <ul>
+                    <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
+                    <li><button>Register</button></li>
+                </ul>
+                <hr>
+                <div><span>Don't have an acoount?</span><a href="#">Register</a></div>
+                <div><span>Forget your</span> <a href="#">Password?</a> <span>or</span> <a href="#">Username?</a></div>
+        </section>
     </div>
     <!-- end conatiner case -->
 </body>
