footer , ul and css

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./main.css">
     <title>FLUX FORM</title>
 </head>
 <body>
@@ -57,5 +58,16 @@
         </section>
     </div>
     <!-- end conatiner case -->
+
+    <!-- Start Footer case -->
+    <footer class="footer">
+        <ul>
+            <li><a href="#">&#169;2014 FLUX</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Info</a></li>
+        </ul>
+    </footer>
+    <!-- end footer case -->
 </body>
 </html>
