add styleas and fonts

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="//cdn.materialdesignicons.com/4.4.95/css/materialdesignicons.min.css">
     <title>FLUX FORM</title>
 </head>
 <body>
@@ -21,10 +22,10 @@
         <section class="left-side">
             <h2>Register</h2>
             <p>Insert your information</p>
-            <div class="input-element"><i class="mdi mdi-account"></i> <input type="text" class="a"> </div>
-            <div class="input-element"><i class="mdi-lock"></i> <input type="text" class="a"> </div>
-            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="a"> </div>
-            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="a"> </div>
+            <div class="input-element"><i class="mdi mdi-account"></i> <input type="text" class="input"> </div>
+            <div class="input-element"><i class="mdi mdi-lock"></i> <input type="text" class="input"> </div>
+            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="input"> </div>
+            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="input"> </div>
             <section class="foot">
                 <ul>
                     <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
