--- a/form-2/index.html
+++ b/form-2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/4.4.95/css/materialdesignicons.min.css">
     <title>FLUX FORM</title>
 </head>
+
 <body>
     <!-- Start header case -->
     <header>
@@ -19,44 +21,58 @@
 
     <!-- Start Container case -->
     <div class="container">
-        <section class="left-side">
-            <h2>Register</h2>
-            <p>Insert your information</p>
-            <div class="input-element"><i class="mdi mdi-account"></i> <input type="text" class="input"> </div>
-            <div class="input-element"><i class="mdi mdi-lock"></i> <input type="text" class="input"> </div>
-            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="input"> </div>
-            <div class="input-element"><i class="mdi mdi-key"></i> <input type="text" class="input"> </div>
-            <section class="foot">
-                <ul>
-                    <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
-                    <li><button>Register</button></li>
-                </ul>
+        <form method="POST">
+            <section class="left-side">
+                <h2>Register</h2>
+                <p>Insert your information</p>
+                <div class="input-element">
+                    <i class="mdi mdi-account"></i>
+                    <input type="text" placeholder="Account" class="input">
+                </div>
+                <div class="input-element">
+                    <i class="mdi mdi-email-outline"></i>
+                    <input type="email" placeholder="Email" class="input">
+                </div>
+                <div class="input-element">
+                    <i class="mdi mdi-key"></i>
+                    <input type="password" class="input" placeholder="Password">
+                </div>
+                <div class="input-element">
+                    <i class="mdi mdi-key"></i>
+                    <input type="password" class="input" placeholder="Repeat password">
+                </div>
+                <section class="foot">
+                    <ul>
+                        <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
+                        <li><button>Register</button></li>
+                    </ul>
+                </section>
             </section>
-        </section>
-        <section class="main-side">
+            <section class="main-side">
                 <h2>Login</h2>
                 <p>Login using social network</p>
                 <section class="social">
                     <a href="#">
-                        <i class="mdi-facebook-box"></i>
+                        <i class="mdi mdi-facebook-box"></i>
                         Sign In Facebook
                     </a>
                     <a href="#">
-                        <i clmdi-twitter-box"></i>
+                        <i class="mdi mdi-twitter-box"></i>
                         Sign In Twitter
                     </a>
                 </section>
                 <p>Or insert your account informations</p>
                 <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
                 <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
-                 <ul>
+                <ul>
                     <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
                     <li><button>Register</button></li>
                 </ul>
                 <hr>
                 <div><span>Don't have an acoount?</span><a href="#">Register</a></div>
                 <div><span>Forget your</span> <a href="#">Password?</a> <span>or</span> <a href="#">Username?</a></div>
-        </section>
+            </section>
+        </form>
     </div>
     <!-- end conatiner case -->
 
@@ -71,4 +87,5 @@
     </footer>
     <!-- end footer case -->
 </body>
+
 </html>
