Or insert your account informations complete

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -62,12 +62,12 @@
                     </a>
                 </section>
                 <p>Or insert your account informations</p>
-                <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
-                <div class="input-element inline"><i class="mdi mdi-account"></i> <input type="text" class="a"></div>
-                <ul>
-                    <li><input type="checkbox"><span>I agree the Terms of Use</span></li>
-                    <li><button>Register</button></li>
-                </ul>
+                <div class="inline"><i class="mdi mdi-account"></i> <input  type="text" class="input" placeholder="Username"></div>
+                <div class="inline"><i class="mdi mdi-account"></i> <input  type="text" class="input" placeholder="Password"></div>
+                <div class="foot">
+                    <section class="inline left"><input type="checkbox"><span>Keep men log in</span></section>
+                    <section class="inline rigth "><Button id="btn">Login</Button></section>
+                </div>
                 <hr>
                 <div><span>Don't have an acoount?</span><a href="#">Register</a></div>
                 <div><span>Forget your</span> <a href="#">Password?</a> <span>or</span> <a href="#">Username?</a></div>
