Complete Flux login form

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -69,8 +69,8 @@
                     <section class="inline rigth "><Button id="btn">Login</Button></section>
                 </div>
                 <hr>
-                <div><span>Don't have an acoount?</span><a href="#">Register</a></div>
-                <div><span>Forget your</span> <a href="#">Password?</a> <span>or</span> <a href="#">Username?</a></div>
+                <div class="main-foot"><span>Don't have an acoount?</span><a href="#">Register</a></div>
+                <div class="main-foot"><span>Forget your</span> <a href="#">Password?</a> <span>or</span> <a href="#">Username?</a></div>
             </section>
         </form>
     </div>
@@ -79,7 +79,7 @@
     <!-- Start Footer case -->
     <footer class="footer">
         <ul>
-            <li><a href="#">&#169;2014 FLUX</a></li>
+            <li><a>&#169;2014 FLUX</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Info</a></li>
