Complete Flux login form update(change secont input icon to password)

--- a/form-2/index.html
+++ b/form-2/index.html
@@ -63,7 +63,7 @@
                 </section>
                 <p>Or insert your account informations</p>
                 <div class="inline"><i class="mdi mdi-account"></i> <input  type="text" class="input" placeholder="Username"></div>
-                <div class="inline"><i class="mdi mdi-account"></i> <input  type="text" class="input" placeholder="Password"></div>
+                <div class="inline"><i class="mdi mdi-lock"></i> <input  type="text" class="input" placeholder="Password"></div>
                 <div class="foot">
                     <section class="inline left"><input type="checkbox"><span>Keep men log in</span></section>
                     <section class="inline rigth "><Button id="btn">Login</Button></section>
